[package]
name = "testing"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.0.0"
awc = { version = "1.0.1", features = ["rustls"] }
bytes = "0.5.4"
futures = "0.3.4"
reqwest = { version = "0.10.3", default_features = false, features = ["rustls-tls"] }

[dev-dependencies]
criterion = "0.3"
openssl = "0.10.28"
rustls = "0.17"
webpki-roots = "0.19"

[patch.crates-io]
awc = { git = "https://github.com/dunnock/actix-web", branch = "rustls_0_17" }
actix-web = { git = "https://github.com/dunnock/actix-web", branch = "rustls_0_17" }
actix-http = { git = "https://github.com/dunnock/actix-web", branch = "rustls_0_17" }

[[bench]]
name = "getimg"
harness = false
