[package]
name = "testing"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
bytes = "0.5.4"
futures = "0.3.4"
reqwest = { version = "0.10.3", default_features = false, features = ["rustls-tls"] }
actix-web = { version = "2.0.0", features = ["openssl"] }
awc = { version = "1.0.1", features = ["rustls"] }
actix-http = { version = "2.0.0-alpha.1", features = ["openssl"] }

[dev-dependencies]
criterion = "0.3"
openssl = "0.10.28"
rustls = "0.16"
webpki-roots = "0.19"

[patch.crates-io]
actix-web = { version = "2.0.0", features = ["openssl"], git = "https://github.com/dunnock/actix-web", branch = "h2-client-config" }
awc = { version = "1.0.1", features = ["rustls"], git = "https://github.com/dunnock/actix-web", branch = "h2-client-config" }
actix-http = { version = "2.0.0-alpha.1", features = ["openssl"], git = "https://github.com/dunnock/actix-web", branch = "h2-client-config" }

[[bench]]
name = "getimg"
harness = false

[profile.release]
debug = true
